--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -3,9 +3,122 @@
    ==================================  */
 
 /* ================= Use Border Box model ================= */
-html {
-  box-sizing: border-box;
+
+
+.work_warpper{
+display:grid ;
+grid-template-rows: repeat(3,1fr);
 }
+
+/* ================= Work_Header grid setting ================= */
+.about_title{
+  display: grid;
+  grid-template-columns: repeat(6,1fr);
+  grid-template-rows: repeat(6,1fr);
+
+  
+}
+.header_mywork{
+  grid-column: 2/6;
+  grid-row: 2/6;
+  font-size: 440%;
+  text-align: center;
+
+}
+
+.work1_box{
+  grid-row: 1/4;
+  grid-column: 1/4;
+  border: black solid;
+  border-radius: 20px;
+
+}
+.work2_box{
+
+  grid-column: 5/7;
+  grid-row: 4/7;
+  border: black solid;
+  border-radius: 20px;
+}
+
+.graphic_project 
+{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: 100px 400px 400px;
+  grid-gap:10px;
+
+}
+.study_project{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: 100px 400px 400px;
+  grid-gap:10px;
+
+}
+.sub_title2{
+  border: black solid;
+  text-align: center;
+  font-size: 200%;
+  border-radius: 10px;
+  grid-column: 1/2;
+  grid-row: 1/3;
+
+}
+
+.sub_title{
+  border: black solid;
+  text-align: center;
+  font-size: 200%;
+  border-radius: 10px;
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+
+section .work_1{
+  border:black solid;
+  grid-column: 1/4;
+  grid-row: 2/3;
+  background-color: white;
+  border-radius: 20px;
+
+}
+section .work_2{
+  border:black solid;
+  grid-column: 1/4;
+  grid-row: 3/4;
+  background-color: white;
+  border-radius: 20px;
+}
+.img_work{
+  width: 70px;
+  height: 20px;
+}
+footer{
+  border:black solid;
+  background-color: black;
+  width: auto;
+  height: 200px;
+}
+
+/* ================= Use Border Box model ================= */
+ .intro_header{
+  border-width: 1px;
+  border-color: black;
+  border-style: solid;
+
+
+}
+
+.title_box1, .title_box2{
+grid-column: 1/3;
+grid-row: 1;
+border-color: black;
+border-style: solid;
+width: 200px;
+height: 200px;
+}
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
