--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -10,7 +10,7 @@ display:grid ;
 grid-template-rows: repeat(3,1fr);
 }
 
-/* ================= Work_Header grid setting ================= */
+/* ================= Work page ================= */
 .about_title{
   display: grid;
   grid-template-columns: repeat(6,1fr);
@@ -94,9 +94,55 @@ section .work_2{
   width: 70px;
   height: 20px;
 }
-footer{
+/* ================= About page  ================= */
+.about_warpper{
+  display: grid;
+  grid-template-rows: 100px 1fr;
+
+}
+.aboutme_info{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
   border:black solid;
-  background-color: black;
+  border-radius: 20px;
+  margin: 50px;
+  padding:20px;
+
+}
+.aboutme_name{
+grid-template-rows: 2/3;
+margin: 20px;
+}
+.aboutme_pic img{
+  border-radius: 50%;
+  margin-top: 20px;
+}
+
+
+
+/* ================= Navbar&footer  ================= */
+.navbar{
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+  grid-template-rows: 80px;
+  font-size: 20px;
+}
+
+li{
+  display: inline;
+  text-align: center;
+  padding-top:30px ;
+}
+.nav_logo{
+background-color: grey;
+color: white;
+width: 60px;
+height: 60px;
+border-radius: 10px;
+}
+
+footer{
+  background-color: rgb(182, 182, 182);
   width: auto;
   height: 200px;
 }
