--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -5,38 +5,41 @@
 /* ================= Use Border Box model ================= */
 
 
-.work_warpper{
-display:grid ;
-grid-template-rows: repeat(3,1fr);
-}
 
 /* ================= Work page ================= */
 .about_title{
   display: grid;
-  grid-template-columns: repeat(6,1fr);
-  grid-template-rows: repeat(6,1fr);
+  grid-template-columns: repeat(5,1fr);
+  grid-template-rows: repeat(4,1fr);
 
   
 }
+.work_warrper{
+  margin-left: 20%;
+  margin-right: 20%;
+  display: grid;
+  grid-template-rows: 400px 1fr 1fr;
+}
+
 .header_mywork{
-  grid-column: 2/6;
-  grid-row: 2/6;
-  font-size: 440%;
+  grid-column: 2/5;
+  grid-row:2/3 ;
+  font-size: 300%;
   text-align: center;
 
 }
 
 .work1_box{
-  grid-row: 1/4;
-  grid-column: 1/4;
+  grid-row: 1/3;
+  grid-column: 1/3;
   border: black solid;
   border-radius: 20px;
 
 }
 .work2_box{
 
-  grid-column: 5/7;
-  grid-row: 4/7;
+  grid-column: 4/7;
+  grid-row: 2/4;
   border: black solid;
   border-radius: 20px;
 }
@@ -94,10 +97,13 @@ section .work_2{
   width: 70px;
   height: 20px;
 }
+
 /* ================= About page  ================= */
 .about_warpper{
   display: grid;
-  grid-template-rows: 100px 1fr;
+  grid-template-rows: 1fr;
+  margin-left: 20%;
+  margin-right: 20%;
 
 }
 .aboutme_info{
@@ -115,24 +121,128 @@ margin: 20px;
 }
 .aboutme_pic img{
   border-radius: 50%;
-  margin-top: 20px;
+
+
 }
 
+/* ================= home page  ================= */
+.home_warpper{
+  display: grid;
+  grid-template-rows:700px 500px 400px;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+.hello_header{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: repeat(7,1fr);
 
+}
+.hello_box{
+  border: black solid;
+  border-radius: 40px;
+  grid-column: 1/4;
+  grid-row: 1/4;
+
+}
+.hello_box2{
+  border: black solid;
+  border-radius: 40px;
+  grid-column: 3/5;
+  grid-row: 3/7;
+  align-content: center;
+}
+.hello_content{
+  margin:10%;
+}
+.hello_title{
+  grid-column: 1/4;
+  grid-row: 2/3;
+ 
+}
+.hello_title,h1{
+  font-size: 50px;
+}
+
+.hello_pic ,img{
+border-radius: 50%;
+grid-column: 1/3;
+grid-row: 4/5;
+width:50%;
+height: 50%;
+}
+
+.intro_mywork{
+grid-row: 5/8;
+grid-column: 1/4;
+border: solid black;
+border-radius: 40px;
+}
+.home_workitem{
+display: grid;
+grid-template-columns: 40px 1fr 1fr 40px;
+grid-template-rows:200px 200px;
+margin-top: 40px;
+}
+.work-itme1{
+  border:black solid;
+  border-radius: 40px;
+
+  grid-column: 2/4;
+}
+.work1_itme{
+  border: black solid;
+  border-radius: 40px;
+  margin-top: 20px;
+
+  grid-column: 2/4;
+}
+
+.hello_contactme{
+display: grid;
+grid-template-columns: repeat(2,1fr);
+grid-template-rows: repeat(4,1fr);
+}
+.meidapic{
+  width: 20%;
+  height: 20%;
+  border-radius: 20px;
+  background-color:grey;
+}
 
 /* ================= Navbar&footer  ================= */
-.navbar{
+ .navbar{
   display: grid;
   grid-template-columns: repeat(5,1fr);
   grid-template-rows: 80px;
   font-size: 20px;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(255, 255, 255);
 }
 
-li{
-  display: inline;
-  text-align: center;
-  padding-top:30px ;
+li {
+  float: left;
 }
+
+li a {
+  display: block;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+li a:hover{
+  color: white;
+  background-color: black;
+}
+
 .nav_logo{
 background-color: grey;
 color: white;
