--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -55,7 +55,7 @@
   .study_project{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: 100px 400px 400px;
+    grid-template-rows: 1fr 4fr 4fr;
     grid-gap:10px;
   
   }
@@ -93,9 +93,9 @@
     background-color: white;
     border-radius: 20px;
   }
-  .img_work{
-    width: 70px;
-    height: 20px;
+  .img_work img{
+    width: auto;
+    height: 100%;
   }
   
   /* ================= About page  ================= */
@@ -220,8 +220,10 @@
     padding-left: 20px;
   }
   .card1image img {
-
+    width: 100%;
+    height: auto;
     text-align: center;
+    padding-bottom: 20px;
   }
   .card1content{
 
@@ -283,7 +285,10 @@
   .picding{
     text-align: center;
   }
-  
+  .picding img{
+    max-width: 50%;
+    height: auto;
+  }
   
   /* ================= Navbar&footer  ================= */
   /* Add a dark grey background color to the top navigation */
