--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -8,6 +8,9 @@ img{
   width: auto;
   height: auto;
 }
+body{
+  background-color: #04D98B;
+}
 
 
 /* ================= Work page ================= */
@@ -99,134 +102,8 @@ img{
   }
 
   
-  /* ================= About page  ================= */
-  .card1_subtitle{
-  grid-area: 2/3;
-  font-size: 3em;
-  color: aqua;
-  }
+ 
   
-  .about_warpper{
-    display: grid;
-    grid-template-rows: 1fr;
-    margin-left: 20%;
-    margin-right: 20%;
-  
-  }
-  .aboutme_info{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    border:black solid;
-    border-radius: 20px;
-    margin: 50px;
-    padding:20px;
-  
-  }
-  .aboutme_name{
-  grid-template-rows: 2/3;
-  margin: 20px;
-  }
-  .aboutme_pic img{
-    border-radius: 50%;
-  
-  
-  }
-  
-  /* ================= home page  ================= */
-  body {
-    display: grid;
-    height: 100vh;
-    grid-template: auto 1fr auto / auto 1fr auto
-  }
-  
-  
-
-.work_warrper{
-  margin-left: 20%;
-  margin-right: 20%;
-  display: grid;
-  grid-template-rows: 400px 1fr 1fr;
-}
-
-.header_mywork{
-  grid-column: 2/5;
-  grid-row:2/3 ;
-  font-size: 300%;
-  text-align: center;
-
-}
-
-.work1_box{
-  grid-row: 1/3;
-  grid-column: 1/3;
-  border: black solid;
-  border-radius: 20px;
-
-}
-.work2_box{
-
-  grid-column: 4/7;
-  grid-row: 2/4;
-  border: black solid;
-  border-radius: 20px;
-}
-
-.graphic_project 
-{
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
-  grid-template-rows: 100px 400px 400px;
-  grid-gap:10px;
-
-}
-.study_project{
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
-  grid-template-rows: 100px 4fr 4fr;
-  grid-gap:10px;
-
-}
-.sub_title2{
-  border: black solid;
-  text-align: center;
-  font-size: 200%;
-  border-radius: 10px;
-  grid-column: 1/2;
-  grid-row: 1/3;
-
-}
-
-.sub_title{
-  border: black solid;
-  text-align: center;
-  font-size: 200%;
-  border-radius: 10px;
-  grid-column: 1/2;
-  grid-row: 1/3;
-}
-
-section .work_1{
-  border:black solid;
-  grid-column: 1/4;
-  grid-row: 2/3;
-  background-color: white;
-  border-radius: 20px;
-
-}
-section .work_2{
-  border:black solid;
-  grid-column: 1/4;
-  grid-row: 3/4;
-  background-color: white;
-  border-radius: 20px;
-}
-.img_work img{
-  max-height: 300px;
-  width: auto;
-
-
-}
-
 /* ================= About page  ================= */
 .card1_subtitle{
 grid-area: 2/3;
@@ -405,7 +282,6 @@ h1.contactme{
   @media screen and (min-width: 700px){
   
   
-  
   .card1{
     grid-template-columns: 150px 1fr;
     grid-template-columns: 1fr 2fr;
@@ -491,54 +367,6 @@ h1.contactme{
     max-width: 50%;
     height: auto;
   }
-  
-  /* ================= Navbar&footer  ================= */
-  /* Add a dark grey background color to the top navigation */
-  .topnav {
-    background-color: #023E73;
-    overflow: hidden;
-  }
-  
-  /* Remove default list styling: remove bullet points from the list and remove default margin */
-  .topnav ul{
-  list-style-type:none;
-  margin:0;
-  padding: 0; 
-  }
-  .topnav ul li{
-  margin:1em;
-  padding: 0;
-  
-  }
-  
-  /* style the site title */
-  .topnav h1{
-  /*this keeps in line with other items in nav */
-  margin: 0;
-  padding: 0;
-  
-  /* style this however you want your title styled */
-  font-family: sans-serif;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav ul li{
-  float: left;
-  text-align: center;
-  grid-column: 1 / 4;
-}
-
-
-.left-sidebar,
-.right-sidebar {
-  padding: 1rem;
-}
-
-.picding img{
-  text-align: center;
-  height: 400px;;
-  width: 400px;
-}
 
 
 /* ================= Navbar&footer  ================= */
