--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -63,9 +63,13 @@ body{
   .study_project{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: 100px 4fr 4fr;
+    grid-template-rows: 100px 1fr 1fr;
     grid-gap:10px;
   
+  }
+  iframe, .img_work{
+    display: flex;
+    justify-content: center;
   }
   .sub_title2{
     border: black solid;
@@ -337,6 +341,12 @@ h1.contactme{
     font-size: 70px;
     color: #EAF2DC;
     text-align: center;
+  }
+  h2,.media{
+    margin-left: 20%;
+    font-size: 2.5em;
+    color: #EAF2DC;
+
   }
   .contact-right{
     background-color: #023E73;
